# lazycoder

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  action.yml  pyproject.toml
.github/workflows/: publish.yml  self-review.yml  test.yml
config/: evals.json  guardrails.json  harness.json  observability.json  production_readiness.json  review_rules.json  setup.json  task_loop.json  working_loop.json
examples/: SearchBox.tsx
scripts/: render_comment.py
src/argus/: __init__.py  cli.py  evals.py  orchestrator.py
src/argus/config/: __init__.py  exceptions.py  loader.py  models.py
src/argus/domain/: __init__.py  aggregator.py  enums.py  models.py
src/argus/llm/: __init__.py  anthropic_client.py  client.py
src/argus/reviewers/: __init__.py  single_rule.py
tests/: conftest.py  test_anthropic_client.py  test_cli.py  test_config_loader.py  test_domain_models.py  test_evals.py  test_orchestrator.py  test_review_e2e_api.py  test_review_e2e_fake.py  test_reviewer_subagent.py  test_verdict_aggregator.py  tests.json
