[project]
name = "lazycoder"
version = "0.1.0"
description = "Code review agent with senior-level judgement: interrogates every diff hunk against a fixed rubric and returns APPROVE / REQUEST_CHANGES / BLOCK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.10",
]

[project.urls]
Repository = "https://github.com/aisona-lab/lazycoder"

[project.scripts]
lazycoder = "argus.cli:main"

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/argus"]

[tool.hatch.build.targets.wheel.force-include]
"config" = "argus/config_defaults"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not integration'"
markers = [
    "integration: hits the live Anthropic API; run with `pytest -m integration`",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
target-version = ["py312"]
line-length = 88

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["argus"]
mypy_path = "src"
